[gd_scene load_steps=11 format=2]

[ext_resource path="res://Source/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Source/Opponent/Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Source/Ball/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Source/Level/Level.gd" type="Script" id=4]
[ext_resource path="res://Assets/FFFFORWA.TTF" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 512, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 40, 300 )

[node name="Level" type="Node"]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -75.0
margin_top = 20.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.470588, 0.588235, 0.627451, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentScore" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 75.0
margin_top = 20.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.470588, 0.588235, 0.627451, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 62.8857, 259.404 )

[node name="Opponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 942.91, 291.536 )

[node name="WallTop" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 512, -10 )
shape = SubResource( 3 )

[node name="WallBottom" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 512, 610 )
shape = SubResource( 3 )

[node name="WallLeft" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2( -41, 300 )
shape = SubResource( 4 )

[node name="WallRight" type="Area2D" parent="."]
position = Vector2( 1105, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
position = Vector2( -40, 300 )
shape = SubResource( 4 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 502.007, 290.394 )

[node name="CountdownTimer" type="Timer" parent="."]
one_shot = true

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="body_entered" from="WallLeft" to="." method="_on_WallLeft_body_entered"]
[connection signal="body_entered" from="WallRight" to="." method="_on_WallRight_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
